Workaround Structure of project is generated

--- a/src/app/components/header-nav-bar/header-nav-bar.component.html
+++ b/src/app/components/header-nav-bar/header-nav-bar.component.html
@@ -1,1 +1,16 @@
-<p>header-nav-bar works!</p>
+<mat-toolbar color="primary" class="">
+    <button *ngIf="smallScreen == true" (click)="toggleSideNav()" mat-icon-button aria-label="Example icon-button with menu icon">
+        <mat-icon>menu</mat-icon>
+    </button>
+    <span>Asite LMS</span>
+    <span class="spacer"></span>
+    <button type="button" routerLink="/login" mat-flat-button color="primary" title="Login">
+        Login
+    </button>
+    <button type="button" routerLink="/sign-up" mat-flat-button color="primary" title="Sign Up">
+        Sign Up
+    </button>
+    <button type="button" routerLink="/profile" mat-flat-button color="primary" title="Profile">
+        Profile
+    </button>
+</mat-toolbar>
