--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import "../node_modules/@angular/material/prebuilt-themes/indigo-pink.css";
+
+html, body {
+    margin: 0;
+}
+
+.mdc-list-item:focus::before {
+    background-color: transparent !important;
+    opacity: 0 !important;
+}
