Workaround Structure of project is generated

--- a/src/app/components/header-nav-bar/header-nav-bar.component.html
+++ b/src/app/components/header-nav-bar/header-nav-bar.component.html
@@ -13,4 +13,7 @@
     <button type="button" routerLink="/profile" mat-flat-button color="primary" title="Profile">
         Profile
     </button>
+    <button type="button" routerLink="/dashboard-home" mat-flat-button color="primary" title="Dashboard">
+        Dashboard
+    </button>
 </mat-toolbar>
