--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,3 +6,4 @@
 
 <router-outlet
     *ngIf="router.url == '/login' || router.url == '/sign-up' || router.url == '/course-details' || router.url == '/error-page' || router.url == '/'"></router-outlet>
+<!-- test comment added -->
