--- a/src/app/components/header-nav-bar/header-nav-bar.component.html
+++ b/src/app/components/header-nav-bar/header-nav-bar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary" class="">
-    <button *ngIf="smallScreen == true" (click)="toggleSideNav()" mat-icon-button aria-label="Example icon-button with menu icon">
+    <button *ngIf="smallScreen == true && router.url !== '/'" (click)="toggleSideNav()" mat-icon-button aria-label="Example icon-button with menu icon">
         <mat-icon>menu</mat-icon>
     </button>
     <span>Asite LMS</span>
