--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,3 +8,4 @@
     *ngIf="router.url == '/login' || router.url == '/sign-up' || router.url == '/course-details' || router.url == '/error-page' || router.url == '/'"></router-outlet>
 <!-- test comment added updated -->
 <!-- naol -->
+<!-- disha -->
