Initial Structure of LMS

--- a/src/app/components/side-nav-bar/side-nav-bar.component.css
+++ b/src/app/components/side-nav-bar/side-nav-bar.component.css
@@ -5,3 +5,7 @@
 .sidenav-container{
     width: 240px                                                                                                                                                        ;
 }
+
+.drawer-height {
+    height: calc(100vh - 64px);
+}
