--- a/src/app/components/side-nav-bar/side-nav-bar.component.html
+++ b/src/app/components/side-nav-bar/side-nav-bar.component.html
@@ -4,7 +4,7 @@
             <a *ngFor="let link of links" mat-list-item [routerLink]="link.route" routerLinkActive="sidenav-item-selected" [activated]="link.isActive" aria-disabled="false">{{link.name}}</a>
         </mat-nav-list>
     </mat-drawer>
-    <mat-drawer-content style="height: calc(100vh - 64px);">
+    <mat-drawer-content class="drawer-height">
         <router-outlet></router-outlet>
     </mat-drawer-content>
 </mat-drawer-container>
