added margin to the workspace

--- a/src/app/components/side-nav-bar/side-nav-bar.component.css
+++ b/src/app/components/side-nav-bar/side-nav-bar.component.css
@@ -6,6 +6,12 @@
     width: 240px                                                                                                                                                        ;
 }
 
-.drawer-height {
-    height: calc(100vh - 64px);
+.drawer-content {
+    max-height: calc(100vh - 64px);
+    min-height: calc(100vh - 64px);
+}
+
+.drawer-div {
+    margin: 12px;
+    border-radius: 4px;
 }
