--- a/src/app/components/side-nav-bar/side-nav-bar.component.html
+++ b/src/app/components/side-nav-bar/side-nav-bar.component.html
@@ -4,7 +4,9 @@
             <a *ngFor="let link of links" mat-list-item [routerLink]="link.route" routerLinkActive="sidenav-item-selected" [activated]="link.isActive" aria-disabled="false">{{link.name}}</a>
         </mat-nav-list>
     </mat-drawer>
-    <mat-drawer-content class="drawer-height">
-        <router-outlet></router-outlet>
+    <mat-drawer-content class="drawer-content">
+        <div class="drawer-div">
+            <router-outlet></router-outlet>
+        </div>
     </mat-drawer-content>
 </mat-drawer-container>
