--- a/src/app/components/trainer/program-activation/program-activation.component.html
+++ b/src/app/components/trainer/program-activation/program-activation.component.html
@@ -1,1 +1,41 @@
 <p>program-activation works!</p>
+<h1 style="color: #3f51b5;">Programs</h1>
+<div class="container">
+    <div class="content">
+    <div class="nav">
+        <div class="link">
+            <a href="http://">Activate</a>
+            <a href="http://">Deactivate</a>
+        </div>
+        <div class="filter">
+            <div class="dropdown">
+                <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Monthwise
+                <span class="caret">⌄</span></button>
+                <ul class="dropdown-menu">
+                </ul>
+            </div>
+            <div class="dropdown">
+                <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Yearwise
+                <span class="caret">⌄</span></button>
+                <ul class="dropdown-menu">
+                </ul>
+            </div>
+        </div>
+    </div>
+    </div>
+    <mat-card>
+    <mat-card-content>Simple card <mat-slide-toggle></mat-slide-toggle></mat-card-content>
+    </mat-card>
+    <mat-card>
+        <mat-card-content>Simple card <mat-slide-toggle></mat-slide-toggle></mat-card-content>
+    </mat-card>
+    <mat-card>
+        <mat-card-content>Simple card <mat-slide-toggle></mat-slide-toggle></mat-card-content>
+    </mat-card>
+    <mat-card>
+        <mat-card-content>Simple card <mat-slide-toggle></mat-slide-toggle></mat-card-content>
+    </mat-card>
+    <mat-card>
+        <mat-card-content>Simple card <mat-slide-toggle></mat-slide-toggle></mat-card-content>
+    </mat-card>
+</div>
