--- a/src/app/components/admin/talent-approval/talent-approval.component.html
+++ b/src/app/components/admin/talent-approval/talent-approval.component.html
@@ -1,1 +1,89 @@
-<p>talent-approval works!</p>
+<div>
+  <div class="welcome">
+    <p class="welcome-p">Welcome, Disha Rabadiya</p>
+  </div>
+  <div class="input-table">
+    <mat-form-field class="">
+      <mat-label>Search</mat-label>
+      <input
+        matInput
+        (keyup)="applyFilter($event)"
+        placeholder="Disha"
+        #input
+      />
+    </mat-form-field>
+
+    <div class="mat-elevation-z8">
+      <table mat-table [dataSource]="dataSource" matSort>
+        <!-- Checkbox Column --> 
+        
+        <ng-container matColumnDef="select">
+          <mat-checkbox></mat-checkbox>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            <mat-checkbox
+              (change)="$event ? toggleAllRows() : null"
+              [checked]="selection.hasValue() && isAllSelected()"
+              [indeterminate]="selection.hasValue() && !isAllSelected()"
+              [aria-label]="checkboxLabel()"
+            >
+            </mat-checkbox>
+          </th>
+          <td mat-cell *matCellDef="let row" mat-sort-header>
+            <mat-checkbox
+              (click)="$event.stopPropagation()"
+              (change)="$event ? selection.toggle(row) : null"
+              [checked]="selection.isSelected(row)"
+              [aria-label]="checkboxLabel(row)"
+            >
+            </mat-checkbox>
+          </td>
+        </ng-container>
+
+        <!-- ID Column -->
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
+          <td mat-cell *matCellDef="let row">{{ row.id }}</td>
+        </ng-container>
+
+        <!-- Progress Column -->
+        <ng-container matColumnDef="email">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
+          <td mat-cell *matCellDef="let row">{{ row.email }}</td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+          <td mat-cell *matCellDef="let row">{{ row.name }}</td>
+        </ng-container>
+
+        <!-- Fruit Column -->
+        <ng-container matColumnDef="fruit">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Program</th>
+          <td mat-cell *matCellDef="let row">{{ row.program }}</td>
+        </ng-container>
+
+        <!-- Check Box -->
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+        <!-- Row shown when there is no matching data. -->
+        <tr class="mat-row" *matNoDataRow>
+          <td class="mat-cell" colspan="4">
+            No data matching the filter "{{ input.value }}"
+          </td>
+        </tr>
+      </table>
+
+      <mat-paginator
+        [pageSizeOptions]="[5, 10, 25]"
+        aria-label="Select page of users"
+      ></mat-paginator>
+    </div>
+  </div>
+  <div class="btn-div">
+    <button mat-raised-button color="primary" class="primary" (click)="approve()">Approve</button>
+    <button mat-flat-button color="warn" class="warn">Cancle</button>
+  </div>
+</div>
