--- a/src/app/components/admin/settings/settings.component.html
+++ b/src/app/components/admin/settings/settings.component.html
@@ -1,1 +1,9 @@
-<p>settings works!</p>
+<h1 class="heading">Settings</h1>
+<div class="container">
+    <mat-card>
+        <mat-card-content>Edit Skill<mat-icon float="right" aria-hidden="false" fontIcon="settings"></mat-icon></mat-card-content>   
+    </mat-card>
+    <mat-card>
+        <mat-card-content>Industry<mat-icon float="right" aria-hidden="false" fontIcon="settings"></mat-icon></mat-card-content>   
+    </mat-card>
+</div>
