--- a/src/app/components/trainer/program-activation/program-activation.component.css
+++ b/src/app/components/trainer/program-activation/program-activation.component.css
@@ -7,11 +7,22 @@
     .mat-mdc-card{
         margin: 10px;
     }
+    .heading{
+        color: #3f51b5; 
+        font-size: 35px; 
+        font-weight: 500; 
+        text-align: center;
+    }
     .container{
         background-color: darkorchid;
         margin: 30px;
         border-radius: 10px;
         padding-bottom: 10px;
+    }
+    select{
+        border-radius: 5px;
+        background-color: floralwhite;
+        font-size: large;
     }
     .date{
         display: flex;
@@ -41,15 +52,15 @@
         font-size: 20px;
     }
     .link>a:hover{
-        color: #21c5d7;
+        color: cyan;
         font-weight: 500;
+        cursor: pointer;
     }
     .nav{
         margin-bottom: 50px;
         padding-top: 10px;
         display: flex;
         justify-content: space-between;
-
     }
     .caret.caret-up {
         border-top-width: 0;
