Added: Role Assignment Component BAsic FUnctionalities

--- a/src/app/components/admin/assign-role/assign-role.component.css
+++ b/src/app/components/admin/assign-role/assign-role.component.css
@@ -1,15 +1,15 @@
 mat-card {
-  max-width: 600px;
+  max-width: 100%;
   margin: 2em auto;
   text-align: center;
   max-height: 600px;
 }
 
 .header {
-  text-align: center;
+  text-align: left;
 }
 .full-width {
-  width: 80%;
+  width: 40%;
 }
 
 .button-row {
@@ -21,22 +21,6 @@ mat-card {
   text-align: center;
 }
 
-.forget-password {
-  padding-left: 0px;
-}
-
 .emailInput {
   padding-top: 10px;
-}
-
-.contentBody {
-  padding: 60px 1rem;
-  background: #1b6ca8;
-  display: block;
-}
-
-.aLink {
-  float: right;
-  padding-right: 60px;
-  text-decoration: none;
 }
