--- a/src/app/components/talent/my-grades-table/my-grades-table.component.html
+++ b/src/app/components/talent/my-grades-table/my-grades-table.component.html
@@ -1,113 +1,151 @@
 <!-- My grades -->
-<div CLASS="grade_table">
+<div class="grade_table">
   <mat-form-field>
     <mat-label>Filter</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
   </mat-form-field>
-  
+
   <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource" matSort>
-  
+
       <!-- ID Column -->
       <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> No. </th>
         <td mat-cell *matCellDef="let row"> {{row.id}} </td>
       </ng-container>
-  
+
       <!-- Progress Column -->
       <ng-container matColumnDef="progress">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Progress </th>
         <td mat-cell *matCellDef="let row"> {{row.progress}}% </td>
       </ng-container>
-  
+
       <!-- Name Column -->
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Program Name </th>
         <td mat-cell *matCellDef="let row"> {{row.name}} </td>
       </ng-container>
-  
-      <!-- Fruit Column -->
-      <ng-container matColumnDef="fruit">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Fruit </th>
-        <td mat-cell *matCellDef="let row"> {{row.fruit}} </td>
+
+      <!-- Trainer Column -->
+      <ng-container matColumnDef="trainer">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Trainer </th>
+        <td mat-cell *matCellDef="let row"> {{row.trainer}} </td>
       </ng-container>
-  
+
+      <!-- Download Column -->
+      <ng-container matColumnDef="download">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Download Certificate</th>
+        <td mat-cell *matCellDef="let row"><a href="">Download </a></td>
+      </ng-container>
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  
+
       <!-- Row shown when there is no matching data. -->
       <tr class="mat-row" *matNoDataRow>
         <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
       </tr>
     </table>
-  
+
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
   </div>
-  
-  
 </div>
 
 <div class="program">
   <!-- Program Description -->
   <div class="program_description">
     <mat-card class="example-card">
+      <div class="img">
+        <img mat-card-image src="https://www.aihr.com/wp-content/uploads/Learning-and-development.png" alt="Photo of a Shiba Inu">
+      </div>
       <mat-card-header>
-        <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>Shiba Inu</mat-card-title>
-        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+        <mat-card-title>UI Program</mat-card-title>
+        <mat-card-subtitle>
+          <p>Pradip Vadasak<br />Total Enrolled : 1220</p>
+          <p>Start Date : 23-07-2022<br />End Date : 12-02-2023</p>
+        </mat-card-subtitle>
       </mat-card-header>
-      <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
       <mat-card-content>
         <p>
-          The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-          A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-          bred for hunting.
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum architecto consequatur earum magnam quisquam
+          doloribus, repellat quas perspiciatis atque similique inventore voluptatum consectetur at.
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab minus eius nostrum praesentium qui voluptatem,
+          error debitis corporis deserunt repellendus?
         </p>
       </mat-card-content>
-      <mat-card-actions>
+      <!-- <mat-card-actions>
         <button mat-button>LIKE</button>
         <button mat-button>SHARE</button>
-      </mat-card-actions>
+      </mat-card-actions> -->
     </mat-card>
   </div>
   <!-- Report card -->
   <div class="report_card">
-    <!-- Technical scenario -->
-    <div class="tech">
-      <h2>Technical Aspects</h2>
-      <table>
-        <tr>
-          <td>Core</td>
-          <td>A</td>
-        </tr>
-        <tr>
-          <td>Advanced</td>
-          <td>A+</td>
-        </tr>
-        <tr>
-          <td>Project</td>
-          <td>A+</td>
-        </tr>
-      </table>
+    <div class="category">
+      <!-- Technical scenario -->
+      <div class="tech">
+        <h1 class="rc_header">Technical Aspects</h1>
+        <div class="cp_t">
+          <circle-progress [percent]="100" [radius]="100" [showSubtitle]="true" [outerStrokeWidth]="10"
+            [showTitle]="false" subtitleFontSize=100 [showUnits]="false" [subtitle]="'A'" [showInnerStroke]='false'
+            [outerStrokeColor]="'#78C000'" [animation]="true" [animationDuration]="500">
+          </circle-progress>
+          <table class="rc_table">
+            <tr>
+              <td>Core</td>
+              <td>A</td>
+            </tr>
+            <tr>
+              <td>Advanced</td>
+              <td>A+</td>
+            </tr>
+            <tr>
+              <td>Project</td>
+              <td>A+</td>
+            </tr>
+            <tr>
+              <td>Core</td>
+              <td>A</td>
+            </tr>
+            <tr>
+              <td>Core</td>
+              <td>A</td>
+            </tr>
+            <tr>
+              <td>Core</td>
+              <td>A</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+      <hr>
+      <!-- Non-Techanical scenario -->
+      <div class="non-tech">
+        <h1 class="rc_header">Non Technical Aspects</h1>
+        <div class="cp_t">
+          <circle-progress [percent]="100" [radius]="100" [showSubtitle]="true" [outerStrokeWidth]="10"
+            [showTitle]="false" subtitleFontSize=100 [showUnits]="false" [subtitle]="'A+'" [showInnerStroke]='false'
+            [outerStrokeColor]="'#78C000'" [animation]="true" [animationDuration]="500"></circle-progress>
+          <table class="rc_table">
+            <tr>
+              <td>Communication</td>
+              <td>A</td>
+            </tr>
+            <tr>
+              <td>Initiative</td>
+              <td>A+</td>
+            </tr>
+            <tr>
+              <td>Project</td>
+              <td>A+</td>
+            </tr>
+          </table>
+        </div>
+      </div>
     </div>
-    <hr>
-    <!-- Non-Techanical scenario -->
-    <div class="non-tech">
-      <h2>Non Technical Aspects</h2>
-      <table>
-        <tr>
-          <td>Core</td>
-          <td>A</td>
-        </tr>
-        <tr>
-          <td>Advanced</td>
-          <td>A+</td>
-        </tr>
-        <tr>
-          <td>Project</td>
-          <td>A+</td>
-        </tr>
-      </table>
+    <div class="btn">
+      <!-- <button class="download-btn">Download Report Card</button> -->
+      <button mat-raised-button color="primary" class="download-btn">Download Certificate</button>
     </div>
   </div>
 </div>
