--- a/src/app/components/trainer/evaluation-table/evaluation-table.component.html
+++ b/src/app/components/trainer/evaluation-table/evaluation-table.component.html
@@ -1,1 +1,49 @@
-<p>evaluation-table works!</p>
+<mat-form-field appearance="outline">
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Value" #input>
+</mat-form-field>
+
+<div class="mat-elevation-z8">
+    <div class="programs-table-container mat-elevation-z8">
+        <table class="programs-table" mat-table [dataSource]="dataSource" matSort>
+
+            <ng-container matColumnDef="programTitle">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+                <td mat-cell *matCellDef="let row" class="programTitle-col"> {{row.programTitle}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="programID" sticky>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+                <td mat-cell *matCellDef="let row" class="programID-col"> {{row.programID}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="trainers">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Trainers </th>
+                <td mat-cell *matCellDef="let row" class="trainers-col"> {{row.trainers}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="skillsList">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Skills </th>
+                <td mat-cell *matCellDef="let row" class="skills-col"> {{row.skillsList}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="evaluate">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Evaluate </th>
+                <td mat-cell *matCellDef="let row" class="evaluate-button-col">
+                    <button mat-raised-button class="evaluate-button" (click)="evaluateFor(row.programID)"
+                        color="primary">Evaluate</button>
+                </td>
+            </ng-container>
+
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+            <!-- Row shown when there is no matching data. -->
+            <tr class="mat-row" *matNoDataRow>
+                <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+            </tr>
+        </table>
+    </div>
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+</div>
