--- a/src/app/components/trainer/evaluation-table/evaluation-table.component.css
+++ b/src/app/components/trainer/evaluation-table/evaluation-table.component.css
@@ -1,7 +1,3 @@
-.programs-table {
-    width: 700px !important;
-}
-
 .programs-table-container {
     max-height: 70vh;
     overflow: auto;
@@ -10,23 +6,7 @@
 .programTitle-col {
     max-width: 30vw;
     min-width: 30vw;
-    background-color: aqua;
 }
-
-/* .programID-col {
-    max-width: 10vw;
-    min-width: 10vw;
-}
-
-.trainers-col {
-    max-width: 20vw;
-    min-width: 20vw;
-}
-
-.skills-col {
-    max-width: 20vw;
-    min-width: 20vw;
-} */
 
 td {
     overflow: hidden;
@@ -34,10 +14,6 @@ td {
     white-space: nowrap;
 }
 
-tr:not(.example-expanded-row):hover {
+tr:not(.row):hover {
     background: whitesmoke;
-}
-
-tr:not(.example-expanded-row):active {
-    background: #efefef;
 }
