--- a/src/app/components/trainer/evaluation-table/evaluation-table.component.html
+++ b/src/app/components/trainer/evaluation-table/evaluation-table.component.html
@@ -5,7 +5,7 @@
 
 <div class="mat-elevation-z8">
     <div class="programs-table-container mat-elevation-z8">
-        <table class="programs-table" mat-table [dataSource]="dataSource" matSort>
+        <table mat-table [dataSource]="dataSource" matSort>
 
             <ng-container matColumnDef="programTitle">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
