--- a/src/app/components/talent/my-grades-table/my-grades-table.component.html
+++ b/src/app/components/talent/my-grades-table/my-grades-table.component.html
@@ -1,54 +1,96 @@
 <!-- My grades -->
 <div class="grade_table">
-  <mat-form-field>
+  <!-- My grade filter -->
+  <mat-form-field appearance="outline">
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Value" #input></mat-form-field>
+  <!-- table view -->
+  <div class="mat-elevation-z8">
+    <div class="programs-table-container mat-elevation-z8">
+      <table mat-table [dataSource]="dataSource" matSort>
+        <!-- Title column -->
+        <ng-container matColumnDef="programTitle">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+          <td mat-cell *matCellDef="let row" class="programTitle-col"> {{row.programTitle}} </td>
+        </ng-container>
+        <!-- ID column -->
+        <ng-container matColumnDef="programID" sticky>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+          <td mat-cell *matCellDef="let row" class="programID-col"> {{row.programID}} </td>
+        </ng-container>
+        <!-- Trainer name -->
+        <ng-container matColumnDef="trainers">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Trainers </th>
+          <td mat-cell *matCellDef="let row" class="trainers-col"> {{row.trainers}} </td>
+        <!-- Progress -->
+        </ng-container> <ng-container matColumnDef="progressList">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Progress </th>
+          <td mat-cell *matCellDef="let row" class="skills-col"> {{row.progressList}}% </td>
+        <!-- Download -->
+        </ng-container><ng-container matColumnDef="download">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Download </th>
+          <td mat-cell *matCellDef="let row" class="download-button-col"> <button mat-raised-button
+              class="download-button" color="primary">Download</button> </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <!-- Row shown when there is no matching data. -->
+        <tr class="mat-row" *matNoDataRow>
+          <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+        </tr>
+      </table>
+    </div>
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+  </div>
+  <!-- <mat-form-field>
     <mat-label>Filter</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
-  </mat-form-field>
+  </mat-form-field> -->
+  <!-- My grade table -->
+  <!-- <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort> -->
 
-  <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource" matSort>
-
-      <!-- ID Column -->
-      <ng-container matColumnDef="id">
+  <!-- ID Column -->
+  <!-- <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> No. </th>
         <td mat-cell *matCellDef="let row"> {{row.id}} </td>
-      </ng-container>
+      </ng-container> -->
 
-      <!-- Progress Column -->
-      <ng-container matColumnDef="progress">
+  <!-- Progress Column -->
+  <!-- <ng-container matColumnDef="progress">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Progress </th>
         <td mat-cell *matCellDef="let row"> {{row.progress}}% </td>
-      </ng-container>
+      </ng-container> -->
 
-      <!-- Name Column -->
-      <ng-container matColumnDef="name">
+  <!-- Name Column -->
+  <!-- <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Program Name </th>
         <td mat-cell *matCellDef="let row"> {{row.name}} </td>
-      </ng-container>
+      </ng-container> -->
 
-      <!-- Trainer Column -->
-      <ng-container matColumnDef="trainer">
+  <!-- Trainer Column -->
+  <!-- <ng-container matColumnDef="trainer">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Trainer </th>
         <td mat-cell *matCellDef="let row"> {{row.trainer}} </td>
-      </ng-container>
+      </ng-container> -->
 
-      <!-- Download Column -->
-      <ng-container matColumnDef="download">
+  <!-- Download Column -->
+  <!-- <ng-container matColumnDef="download">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Download Certificate</th>
         <td mat-cell *matCellDef="let row"><a href="">Download </a></td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr> -->
 
-      <!-- Row shown when there is no matching data. -->
-      <tr class="mat-row" *matNoDataRow>
+  <!-- Row shown when there is no matching data. -->
+  <!-- <tr class="mat-row" *matNoDataRow>
         <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
       </tr>
-    </table>
+    </table> -->
 
-    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
-  </div>
+  <!-- <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+  </div> -->
 </div>
 
 <div class="program">
@@ -56,7 +98,8 @@
   <div class="program_description">
     <mat-card class="example-card">
       <div class="img">
-        <img mat-card-image src="https://www.aihr.com/wp-content/uploads/Learning-and-development.png" alt="Photo of a Shiba Inu">
+        <img mat-card-image src="https://www.aihr.com/wp-content/uploads/Learning-and-development.png"
+          alt="Photo of a Shiba Inu">
       </div>
       <mat-card-header>
         <mat-card-title>UI Program</mat-card-title>
@@ -86,7 +129,7 @@
       <div class="tech">
         <h1 class="rc_header">Technical Aspects</h1>
         <div class="cp_t">
-          <circle-progress [percent]="100" [radius]="100" [showSubtitle]="true" [outerStrokeWidth]="10"
+          <circle-progress [percent]="75" [radius]="100" [showSubtitle]="true" [outerStrokeWidth]="10"
             [showTitle]="false" subtitleFontSize=100 [showUnits]="false" [subtitle]="'A'" [showInnerStroke]='false'
             [outerStrokeColor]="'#78C000'" [animation]="true" [animationDuration]="500">
           </circle-progress>
